examples/test/testpolicy12366.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12366
  namespace: namespace312
spec:
  podSelector:
    matchLabels:
      key15: value43
      key34: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value13
          key26: value22
      podSelector:
        matchLabels:
          key43: value14
